//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package ipc;

option java_package = "com.sandpolis.core.ipc";

/**
 * Request instance metadata.
 */
message RQ_Metadata {
}

/**
 * Response to RQ_Metadata.
 */
message RS_Metadata {

    // The instance's type
    string instance = 1;

    // The instance's Sandpolis version
    string version = 2;

    // The instance's PID
    int64 pid = 3;
}
